# rusty-java

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
integration_tests/: Arithmetic.java  Arrays.java  FizzBuzz.java  Objects.java  Print.java  StaticClass.java  StaticFields.java  SystemTime.java  main.rs
integration_tests/snapshots/: integration_tests__Arithmetic.snap  integration_tests__Arrays.snap  integration_tests__FizzBuzz.snap  integration_tests__Objects.snap  integration_tests__Print.snap  integration_tests__StaticClass.snap  integration_tests__StaticClass.snap.new  integration_tests__StaticFields.snap  integration_tests__SystemTime.snap
jdk-tools/: Cargo.toml
jdk-tools/src/: lib.rs  main.rs
src/: call_frame.rs  class.rs  class_file.rs  descriptor.rs  instructions.rs  lib.rs  main.rs  opcodes.rs  reader.rs  vm.rs
