[workspace]
members = ["jdk-tools"]

[package]
name = "rusty-java"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.2"
bumpalo = { version = "3.15.3", features = ["collections", "allocator-api2"] }
byteorder = "1.5.0"
clap = { version = "4.5.1", features = ["derive"] }
color-eyre = "0.6.2"
hashbrown = "0.14.3"
strum = { git = "https://github.com/hasali19/strum", branch = "fix-missing-generics", features = [
    "derive",
] }
